--- a/glc_lib/glc_lib.vcproj
+++ b/glc_lib/glc_lib.vcproj
@@ -45,8 +45,8 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="-Zm200 -w34100 -w34189"
 				Optimization="4"
-				AdditionalIncludeDirectories="&quot;$(QTDIR)\include\QtCore&quot;,&quot;$(QTDIR)\include\QtGui&quot;,&quot;$(QTDIR)\include\QtOpenGL&quot;,&quot;$(QTDIR)\include&quot;,&quot;.&quot;,&quot;3rdparty\zlib&quot;,&quot;$(QTDIR)\include\ActiveQt&quot;,&quot;debug&quot;,..\..\Qt\4.8.2\mkspecs\default"
-				PreprocessorDefinitions="_WINDOWS,UNICODE,WIN32,QT_LARGEFILE_SUPPORT,CREATE_GLC_LIB_DLL,LIB3DS_EXPORTS,_CRT_SECURE_NO_WARNINGS,QT_DLL,QT_OPENGL_LIB,QT_GUI_LIB,QT_CORE_LIB,QT_HAVE_MMX,QT_HAVE_3DNOW,QT_HAVE_SSE,QT_HAVE_MMXEXT,QT_HAVE_SSE2,QT_THREAD_SUPPORT"
+				AdditionalIncludeDirectories=".;&quot;$(QTDIR)\include\QtCore&quot;;&quot;$(QTDIR)\include\QtGui&quot;;&quot;$(QTDIR)\include&quot;;3rdparty\zlib;&quot;$(QTDIR)\include\ActiveQt&quot;;debug;..\..\Qt\4.8.2\mkspecs\default;&quot;$(VL_SRC)&quot;;&quot;$(VL)&quot;;&quot;$(VL_SRC)\3rdparty\Khronos&quot;"
+				PreprocessorDefinitions="_WINDOWS;UNICODE;WIN32;QT_LARGEFILE_SUPPORT;CREATE_GLC_LIB_DLL;LIB3DS_EXPORTS;_CRT_SECURE_NO_WARNINGS;QT_DLL;QT_GUI_LIB;QT_CORE_LIB;QT_HAVE_MMX;QT_HAVE_3DNOW;QT_HAVE_SSE;QT_HAVE_MMXEXT;QT_HAVE_SSE2;QT_THREAD_SUPPORT"
 				GeneratePreprocessedFile="0"
 				ExceptionHandling="1"
 				RuntimeLibrary="3"
@@ -73,11 +73,11 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="glu32.lib opengl32.lib gdi32.lib user32.lib $(QTDIR)\lib\QtOpenGLd4.lib $(QTDIR)\lib\QtGuid4.lib $(QTDIR)\lib\QtCored4.lib"
+				AdditionalDependencies="glu32.lib opengl32.lib gdi32.lib user32.lib $(QTDIR)\lib\QtCored4.lib $(QTDIR)\lib\QtGuid4.lib VLCore-d.lib VLGraphics-d.lib"
 				OutputFile="$(OutDir)\GLC_lib2.dll"
 				Version="2.20"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="$(QTDIR)\lib,d:\spa_instdir\Qt\4.8.2\lib"
+				AdditionalLibraryDirectories="&quot;$(QTDIR)\lib&quot;;d:\Qt\4.8.2\lib;&quot;$(VL)\vlCore\lib\Debug&quot;;&quot;$(VL)\vlGraphics\lib\Debug&quot;;&quot;$(VL)\vlWin32\lib\Debug&quot;"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile=""
 				SubSystem="0"
@@ -234,6 +234,18 @@
 				>
 			</File>
 			<File
+				RelativePath=".\glc_exception.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\glc_ext.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\glc_ext.h"
+				>
+			</File>
+			<File
 				RelativePath=".\glc_factory.cpp"
 				>
 			</File>
@@ -246,9 +258,9 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Moc&apos;ing glc_factory.h..."
-						CommandLine="&quot;$(QTDIR)\bin\moc.exe&quot;  &quot;$(InputPath)&quot; -o &quot;GeneratedFiles\$(ConfigurationName)\moc_$(InputName).cpp&quot;  -D_WINDOWS -DUNICODE -DWIN32 -DQT_LARGEFILE_SUPPORT -DCREATE_GLC_LIB_DLL -DLIB3DS_EXPORTS -D_CRT_SECURE_NO_WARNINGS -DQT_DLL -DQT_OPENGL_LIB -DQT_GUI_LIB -DQT_CORE_LIB -DQT_HAVE_MMX -DQT_HAVE_3DNOW -DQT_HAVE_SSE -DQT_HAVE_MMXEXT -DQT_HAVE_SSE2 -DQT_THREAD_SUPPORT -D_WINDLL &quot;-I$(QTDIR)\include\QtCore&quot; &quot;-I$(QTDIR)\include\QtGui&quot; &quot;-I$(QTDIR)\include\QtOpenGL&quot; &quot;-I$(QTDIR)\include&quot; &quot;-I.&quot; &quot;-I.\3rdparty\zlib&quot; &quot;-I$(QTDIR)\include\ActiveQt&quot; &quot;-I.\debug&quot; &quot;-I.\..\..\Qt\4.8.2\mkspecs\default&quot;&#x0D;&#x0A;"
+						CommandLine="&quot;$(QTDIR)\bin\moc.exe&quot;  &quot;$(InputPath)&quot; -o &quot;.\GeneratedFiles\$(ConfigurationName)\moc_$(InputName).cpp&quot;  -D_WINDOWS -DUNICODE -DWIN32 -DQT_LARGEFILE_SUPPORT -DCREATE_GLC_LIB_DLL -DLIB3DS_EXPORTS -D_CRT_SECURE_NO_WARNINGS -DQT_DLL -DQT_GUI_LIB -DQT_CORE_LIB -DQT_HAVE_MMX -DQT_HAVE_3DNOW -DQT_HAVE_SSE -DQT_HAVE_MMXEXT -DQT_HAVE_SSE2 -DQT_THREAD_SUPPORT -D_WINDLL &quot;-I.&quot; &quot;-I$(QTDIR)\include\QtCore&quot; &quot;-I$(QTDIR)\include\QtGui&quot; &quot;-I$(QTDIR)\include&quot; &quot;-I.\3rdparty\zlib&quot; &quot;-I$(QTDIR)\include\ActiveQt&quot; &quot;-I.\debug&quot; &quot;-I.\..\..\Qt\4.8.2\mkspecs\default&quot; &quot;-I$(VL_SRC)\.&quot; &quot;-I$(VL)\.&quot; &quot;-I$(VL_SRC)\3rdparty\Khronos&quot;&#x0D;&#x0A;"
 						AdditionalDependencies="&quot;$(QTDIR)\bin\moc.exe&quot;;$(InputPath)"
-						Outputs="&quot;GeneratedFiles\$(ConfigurationName)\moc_$(InputName).cpp&quot;"
+						Outputs="&quot;.\GeneratedFiles\$(ConfigurationName)\moc_$(InputName).cpp&quot;"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -303,6 +315,14 @@
 				RelativePath=".\glc_state.h"
 				>
 			</File>
+			<File
+				RelativePath=".\glc_tracelog.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\glc_tracelog.h"
+				>
+			</File>
 			<Filter
 				Name="sceneGraph"
 				>
@@ -336,14 +356,6 @@
 				</File>
 				<File
 					RelativePath=".\sceneGraph\glc_selectionset.h"
-					>
-				</File>
-				<File
-					RelativePath=".\sceneGraph\glc_spacepartitioning.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\sceneGraph\glc_spacepartitioning.h"
 					>
 				</File>
 				<File
@@ -403,7 +415,7 @@
 						<Tool
 							Name="VCCustomBuildTool"
 							Description="Moc&apos;ing glc_3dxmltoworld.h..."
-							CommandLine="&quot;$(QTDIR)\bin\moc.exe&quot;  &quot;$(InputPath)&quot; -o &quot;.\GeneratedFiles\$(ConfigurationName)\moc_$(InputName).cpp&quot;  -D_WINDOWS -DUNICODE -DWIN32 -DQT_LARGEFILE_SUPPORT -DCREATE_GLC_LIB_DLL -DLIB3DS_EXPORTS -D_CRT_SECURE_NO_WARNINGS -DQT_DLL -DQT_OPENGL_LIB -DQT_GUI_LIB -DQT_CORE_LIB -DQT_HAVE_MMX -DQT_HAVE_3DNOW -DQT_HAVE_SSE -DQT_HAVE_MMXEXT -DQT_HAVE_SSE2 -DQT_THREAD_SUPPORT -D_WINDLL &quot;-I$(QTDIR)\include\QtCore&quot; &quot;-I$(QTDIR)\include\QtGui&quot; &quot;-I$(QTDIR)\include\QtOpenGL&quot; &quot;-I$(QTDIR)\include&quot; &quot;-I.&quot; &quot;-I.\3rdparty\zlib&quot; &quot;-I$(QTDIR)\include\ActiveQt&quot; &quot;-I.\debug&quot; &quot;-I.\..\..\Qt\4.8.2\mkspecs\default&quot;&#x0D;&#x0A;"
+							CommandLine="&quot;$(QTDIR)\bin\moc.exe&quot;  &quot;$(InputPath)&quot; -o &quot;.\GeneratedFiles\$(ConfigurationName)\moc_$(InputName).cpp&quot;  -D_WINDOWS -DUNICODE -DWIN32 -DQT_LARGEFILE_SUPPORT -DCREATE_GLC_LIB_DLL -DLIB3DS_EXPORTS -D_CRT_SECURE_NO_WARNINGS -DQT_DLL -DQT_GUI_LIB -DQT_CORE_LIB -DQT_HAVE_MMX -DQT_HAVE_3DNOW -DQT_HAVE_SSE -DQT_HAVE_MMXEXT -DQT_HAVE_SSE2 -DQT_THREAD_SUPPORT -D_WINDLL &quot;-I.&quot; &quot;-I$(QTDIR)\include\QtCore&quot; &quot;-I$(QTDIR)\include\QtGui&quot; &quot;-I$(QTDIR)\include&quot; &quot;-I.\3rdparty\zlib&quot; &quot;-I$(QTDIR)\include\ActiveQt&quot; &quot;-I.\debug&quot; &quot;-I.\..\..\Qt\4.8.2\mkspecs\default&quot; &quot;-I$(VL_SRC)\.&quot; &quot;-I$(VL)\.&quot; &quot;-I$(VL_SRC)\3rdparty\Khronos&quot;&#x0D;&#x0A;"
 							AdditionalDependencies="&quot;$(QTDIR)\bin\moc.exe&quot;;$(InputPath)"
 							Outputs="&quot;.\GeneratedFiles\$(ConfigurationName)\moc_$(InputName).cpp&quot;"
 						/>
@@ -441,7 +453,7 @@
 						<Tool
 							Name="VCCustomBuildTool"
 							Description="Moc&apos;ing glc_fileloader.h..."
-							CommandLine="&quot;$(QTDIR)\bin\moc.exe&quot;  &quot;$(InputPath)&quot; -o &quot;.\GeneratedFiles\$(ConfigurationName)\moc_$(InputName).cpp&quot;  -D_WINDOWS -DUNICODE -DWIN32 -DQT_LARGEFILE_SUPPORT -DCREATE_GLC_LIB_DLL -DLIB3DS_EXPORTS -D_CRT_SECURE_NO_WARNINGS -DQT_DLL -DQT_OPENGL_LIB -DQT_GUI_LIB -DQT_CORE_LIB -DQT_HAVE_MMX -DQT_HAVE_3DNOW -DQT_HAVE_SSE -DQT_HAVE_MMXEXT -DQT_HAVE_SSE2 -DQT_THREAD_SUPPORT -D_WINDLL &quot;-I$(QTDIR)\include\QtCore&quot; &quot;-I$(QTDIR)\include\QtGui&quot; &quot;-I$(QTDIR)\include\QtOpenGL&quot; &quot;-I$(QTDIR)\include&quot; &quot;-I.&quot; &quot;-I.\3rdparty\zlib&quot; &quot;-I$(QTDIR)\include\ActiveQt&quot; &quot;-I.\debug&quot; &quot;-I.\..\..\Qt\4.8.2\mkspecs\default&quot;&#x0D;&#x0A;"
+							CommandLine="&quot;$(QTDIR)\bin\moc.exe&quot;  &quot;$(InputPath)&quot; -o &quot;.\GeneratedFiles\$(ConfigurationName)\moc_$(InputName).cpp&quot;  -D_WINDOWS -DUNICODE -DWIN32 -DQT_LARGEFILE_SUPPORT -DCREATE_GLC_LIB_DLL -DLIB3DS_EXPORTS -D_CRT_SECURE_NO_WARNINGS -DQT_DLL -DQT_GUI_LIB -DQT_CORE_LIB -DQT_HAVE_MMX -DQT_HAVE_3DNOW -DQT_HAVE_SSE -DQT_HAVE_MMXEXT -DQT_HAVE_SSE2 -DQT_THREAD_SUPPORT -D_WINDLL &quot;-I.&quot; &quot;-I$(QTDIR)\include\QtCore&quot; &quot;-I$(QTDIR)\include\QtGui&quot; &quot;-I$(QTDIR)\include&quot; &quot;-I.\3rdparty\zlib&quot; &quot;-I$(QTDIR)\include\ActiveQt&quot; &quot;-I.\debug&quot; &quot;-I.\..\..\Qt\4.8.2\mkspecs\default&quot; &quot;-I$(VL_SRC)\.&quot; &quot;-I$(VL)\.&quot; &quot;-I$(VL_SRC)\3rdparty\Khronos&quot;&#x0D;&#x0A;"
 							AdditionalDependencies="&quot;$(QTDIR)\bin\moc.exe&quot;;$(InputPath)"
 							Outputs="&quot;.\GeneratedFiles\$(ConfigurationName)\moc_$(InputName).cpp&quot;"
 						/>
@@ -471,7 +483,7 @@
 						<Tool
 							Name="VCCustomBuildTool"
 							Description="Moc&apos;ing glc_worldto3dxml.h..."
-							CommandLine="&quot;$(QTDIR)\bin\moc.exe&quot;  &quot;$(InputPath)&quot; -o &quot;.\GeneratedFiles\$(ConfigurationName)\moc_$(InputName).cpp&quot;  -D_WINDOWS -DUNICODE -DWIN32 -DQT_LARGEFILE_SUPPORT -DCREATE_GLC_LIB_DLL -DLIB3DS_EXPORTS -D_CRT_SECURE_NO_WARNINGS -DQT_DLL -DQT_OPENGL_LIB -DQT_GUI_LIB -DQT_CORE_LIB -DQT_HAVE_MMX -DQT_HAVE_3DNOW -DQT_HAVE_SSE -DQT_HAVE_MMXEXT -DQT_HAVE_SSE2 -DQT_THREAD_SUPPORT -D_WINDLL &quot;-I$(QTDIR)\include\QtCore&quot; &quot;-I$(QTDIR)\include\QtGui&quot; &quot;-I$(QTDIR)\include\QtOpenGL&quot; &quot;-I$(QTDIR)\include&quot; &quot;-I.&quot; &quot;-I.\3rdparty\zlib&quot; &quot;-I$(QTDIR)\include\ActiveQt&quot; &quot;-I.\debug&quot; &quot;-I.\..\..\Qt\4.8.2\mkspecs\default&quot;&#x0D;&#x0A;"
+							CommandLine="&quot;$(QTDIR)\bin\moc.exe&quot;  &quot;$(InputPath)&quot; -o &quot;.\GeneratedFiles\$(ConfigurationName)\moc_$(InputName).cpp&quot;  -D_WINDOWS -DUNICODE -DWIN32 -DQT_LARGEFILE_SUPPORT -DCREATE_GLC_LIB_DLL -DLIB3DS_EXPORTS -D_CRT_SECURE_NO_WARNINGS -DQT_DLL -DQT_GUI_LIB -DQT_CORE_LIB -DQT_HAVE_MMX -DQT_HAVE_3DNOW -DQT_HAVE_SSE -DQT_HAVE_MMXEXT -DQT_HAVE_SSE2 -DQT_THREAD_SUPPORT -D_WINDLL &quot;-I.&quot; &quot;-I$(QTDIR)\include\QtCore&quot; &quot;-I$(QTDIR)\include\QtGui&quot; &quot;-I$(QTDIR)\include&quot; &quot;-I.\3rdparty\zlib&quot; &quot;-I$(QTDIR)\include\ActiveQt&quot; &quot;-I.\debug&quot; &quot;-I.\..\..\Qt\4.8.2\mkspecs\default&quot; &quot;-I$(VL_SRC)\.&quot; &quot;-I$(VL)\.&quot; &quot;-I$(VL_SRC)\3rdparty\Khronos&quot;&#x0D;&#x0A;"
 							AdditionalDependencies="&quot;$(QTDIR)\bin\moc.exe&quot;;$(InputPath)"
 							Outputs="&quot;.\GeneratedFiles\$(ConfigurationName)\moc_$(InputName).cpp&quot;"
 						/>
@@ -645,11 +657,11 @@
 				Name="shading"
 				>
 				<File
-					RelativePath=".\shading\glc_light.cpp"
+					RelativePath=".\shading\glc_material.cpp"
 					>
 				</File>
 				<File
-					RelativePath=".\shading\glc_light.h"
+					RelativePath=".\shading\glc_material.h"
 					>
 				</File>
 				<File
@@ -658,22 +670,6 @@
 				</File>
 				<File
 					RelativePath=".\shading\glc_renderproperties.h"
-					>
-				</File>
-				<File
-					RelativePath=".\shading\glc_selectionmaterial.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\shading\glc_selectionmaterial.h"
-					>
-				</File>
-				<File
-					RelativePath=".\shading\glc_shader.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\shading\glc_shader.h"
 					>
 				</File>
 				<File
@@ -688,30 +684,92 @@
 			<Filter
 				Name="viewport"
 				>
-				<File
-					RelativePath=".\viewport\glc_camera.cpp"
+			</Filter>
+			<Filter
+				Name="3rdparty"
+				>
+				<Filter
+					Name="quazip"
 					>
-				</File>
-				<File
-					RelativePath=".\viewport\glc_camera.h"
-					>
-				</File>
-				<File
-					RelativePath=".\viewport\glc_frustum.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\viewport\glc_frustum.h"
-					>
-				</File>
-				<File
-					RelativePath=".\viewport\glc_viewport.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\viewport\glc_viewport.h"
-					>
-				</File>
+					<File
+						RelativePath=".\3rdparty\quazip\crypt.h"
+						>
+					</File>
+					<File
+						RelativePath=".\3rdparty\quazip\ioapi.c"
+						>
+					</File>
+					<File
+						RelativePath=".\3rdparty\quazip\ioapi.h"
+						>
+					</File>
+					<File
+						RelativePath=".\3rdparty\quazip\quazip.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\3rdparty\quazip\quazip.h"
+						>
+					</File>
+					<File
+						RelativePath=".\3rdparty\quazip\quazipfile.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\3rdparty\quazip\quazipfile.h"
+						>
+						<FileConfiguration
+							Name="Debug|Win32"
+							>
+							<Tool
+								Name="VCCustomBuildTool"
+								Description="Moc&apos;ing quazipfile.h..."
+								CommandLine="&quot;$(QTDIR)\bin\moc.exe&quot;  &quot;$(InputPath)&quot; -o &quot;.\GeneratedFiles\$(ConfigurationName)\moc_$(InputName).cpp&quot;  -D_WINDOWS -DUNICODE -DWIN32 -DQT_LARGEFILE_SUPPORT -DCREATE_GLC_LIB_DLL -DLIB3DS_EXPORTS -D_CRT_SECURE_NO_WARNINGS -DQT_DLL -DQT_GUI_LIB -DQT_CORE_LIB -DQT_HAVE_MMX -DQT_HAVE_3DNOW -DQT_HAVE_SSE -DQT_HAVE_MMXEXT -DQT_HAVE_SSE2 -DQT_THREAD_SUPPORT -D_WINDLL &quot;-I.&quot; &quot;-I$(QTDIR)\include\QtCore&quot; &quot;-I$(QTDIR)\include\QtGui&quot; &quot;-I$(QTDIR)\include&quot; &quot;-I.\3rdparty\zlib&quot; &quot;-I$(QTDIR)\include\ActiveQt&quot; &quot;-I.\debug&quot; &quot;-I.\..\..\Qt\4.8.2\mkspecs\default&quot; &quot;-I$(VL_SRC)\.&quot; &quot;-I$(VL)\.&quot; &quot;-I$(VL_SRC)\3rdparty\Khronos&quot;&#x0D;&#x0A;"
+								AdditionalDependencies="&quot;$(QTDIR)\bin\moc.exe&quot;;$(InputPath)"
+								Outputs="&quot;.\GeneratedFiles\$(ConfigurationName)\moc_$(InputName).cpp&quot;"
+							/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release|Win32"
+							>
+							<Tool
+								Name="VCCustomBuildTool"
+								Description="Moc&apos;ing quazipfile.h..."
+								CommandLine="&quot;$(QTDIR)\bin\moc.exe&quot;  &quot;$(InputPath)&quot; -o &quot;.\GeneratedFiles\$(ConfigurationName)\moc_$(InputName).cpp&quot;  -D_WINDOWS -DUNICODE -DWIN32 -DQT_LARGEFILE_SUPPORT -DCREATE_GLC_LIB_DLL -DLIB3DS_EXPORTS -D_CRT_SECURE_NO_WARNINGS -DQT_DLL -DQT_NO_DEBUG -DQT_OPENGL_LIB -DQT_GUI_LIB -DQT_CORE_LIB -DQT_HAVE_MMX -DQT_HAVE_3DNOW -DQT_HAVE_SSE -DQT_HAVE_MMXEXT -DQT_HAVE_SSE2 -DQT_THREAD_SUPPORT -DNDEBUG -D_WINDLL &quot;-I$(QTDIR)\include\QtCore&quot; &quot;-I$(QTDIR)\include\QtGui&quot; &quot;-I$(QTDIR)\include\QtOpenGL&quot; &quot;-I$(QTDIR)\include&quot; &quot;-I.&quot; &quot;-I.\3rdparty\zlib&quot; &quot;-I$(QTDIR)\include\ActiveQt&quot; &quot;-I.\release&quot; &quot;-I.\..\..\Qt\4.8.2\mkspecs\default&quot;&#x0D;&#x0A;"
+								AdditionalDependencies="&quot;$(QTDIR)\bin\moc.exe&quot;;$(InputPath)"
+								Outputs="&quot;.\GeneratedFiles\$(ConfigurationName)\moc_$(InputName).cpp&quot;"
+							/>
+						</FileConfiguration>
+					</File>
+					<File
+						RelativePath=".\3rdparty\quazip\quazipfileinfo.h"
+						>
+					</File>
+					<File
+						RelativePath=".\3rdparty\quazip\quazipnewinfo.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\3rdparty\quazip\quazipnewinfo.h"
+						>
+					</File>
+					<File
+						RelativePath=".\3rdparty\quazip\unzip.c"
+						>
+					</File>
+					<File
+						RelativePath=".\3rdparty\quazip\unzip.h"
+						>
+					</File>
+					<File
+						RelativePath=".\3rdparty\quazip\zip.c"
+						>
+					</File>
+					<File
+						RelativePath=".\3rdparty\quazip\zip.h"
+						>
+					</File>
+				</Filter>
 			</Filter>
 		</Filter>
 		<Filter
@@ -719,6 +777,144 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\glc_exception.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Generated Files"
+			Filter="moc;h;cpp"
+			UniqueIdentifier="{71ED8ED8-ACB9-4CE9-BBE1-E00B30144E11}"
+			>
+			<Filter
+				Name="Debug"
+				>
+				<File
+					RelativePath=".\GeneratedFiles\Debug\moc_glc_3dxmltoworld.cpp"
+					>
+					<FileConfiguration
+						Name="Release|Win32"
+						ExcludedFromBuild="true"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath=".\GeneratedFiles\Debug\moc_glc_factory.cpp"
+					>
+					<FileConfiguration
+						Name="Release|Win32"
+						ExcludedFromBuild="true"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath=".\GeneratedFiles\Debug\moc_glc_fileloader.cpp"
+					>
+					<FileConfiguration
+						Name="Release|Win32"
+						ExcludedFromBuild="true"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath=".\GeneratedFiles\Debug\moc_glc_worldto3dxml.cpp"
+					>
+					<FileConfiguration
+						Name="Release|Win32"
+						ExcludedFromBuild="true"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath=".\GeneratedFiles\Debug\moc_quazipfile.cpp"
+					>
+					<FileConfiguration
+						Name="Release|Win32"
+						ExcludedFromBuild="true"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+						/>
+					</FileConfiguration>
+				</File>
+			</Filter>
+			<Filter
+				Name="Release"
+				>
+				<File
+					RelativePath=".\GeneratedFiles\Release\moc_glc_3dxmltoworld.cpp"
+					>
+					<FileConfiguration
+						Name="Debug|Win32"
+						ExcludedFromBuild="true"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath=".\GeneratedFiles\Release\moc_glc_factory.cpp"
+					>
+					<FileConfiguration
+						Name="Debug|Win32"
+						ExcludedFromBuild="true"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath=".\GeneratedFiles\Release\moc_glc_fileloader.cpp"
+					>
+					<FileConfiguration
+						Name="Debug|Win32"
+						ExcludedFromBuild="true"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath=".\GeneratedFiles\Release\moc_glc_worldto3dxml.cpp"
+					>
+					<FileConfiguration
+						Name="Debug|Win32"
+						ExcludedFromBuild="true"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath=".\GeneratedFiles\Release\moc_quazipfile.cpp"
+					>
+					<FileConfiguration
+						Name="Debug|Win32"
+						ExcludedFromBuild="true"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+						/>
+					</FileConfiguration>
+				</File>
+			</Filter>
 		</Filter>
 		<File
 			RelativePath="d:\spa_instdir\GLC_lib\src\GLC_lib_resource.rc"
